fix style overflow

--- a/src/styles/_countryDetails.scss
+++ b/src/styles/_countryDetails.scss
@@ -47,12 +47,6 @@
             margin-bottom: 0;
             margin-right: 60px;
         }
-
-        &:last-child {
-            @media screen and (min-width: 900px) {
-                margin-right: -60px;
-            }
-        }
     }
 
     .content {
